# fn

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
fn/: package.json
fn/public/: index.html
fn/src/: index.js
fn/src/components/: App.js  Details.js  Header.js  Main.js
fn/src/components/functions/: Sudoku.js  Words.js
src/: main.rs
src/state/: mod.rs
src/sudoku/: mod.rs
src/words/: mod.rs
ui/: functions.json  index.html  index.js  style.css
ui/fns/: sudoku.html  words.html
