[package]
name = "icub3d_fn"
version = "0.1.0"
authors = ["Joshua Marsh (icub3d) <joshua@themarshians.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.3"
icub3d_combinatorics = "0.1.0"
failure = "0.1.7"
rocket_contrib = "0.4.3"
serde_json = "1.0.48"
